[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/control/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://resource/texture/flag/lang_en_us.png" type="Texture" id=2]
[ext_resource path="res://resource/texture/flag/lang_th.png" type="Texture" id=3]
[ext_resource path="res://resource/deftheme.tres" type="Theme" id=4]
[ext_resource path="res://resource/texture/image/bg4.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "go_play"
length = 0.001
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "go_play"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "start"

[node name="mainmenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="."]
modulate = Color( 0.41, 0.41, 0.41, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center" type="CenterContainer" parent="margin"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1341.0
margin_bottom = 743.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="margin/center"]
margin_left = 609.0
margin_top = 297.0
margin_right = 707.0
margin_bottom = 421.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label1" type="Label" parent="margin/center/vbox"]
margin_right = 98.0
margin_bottom = 25.0
text = "#your_name"
align = 1

[node name="name_field" type="LineEdit" parent="margin/center/vbox"]
margin_top = 29.0
margin_right = 98.0
margin_bottom = 58.0
text = "Player"
placeholder_text = "#player"

[node name="label2" type="Label" parent="margin/center/vbox"]
margin_top = 62.0
margin_right = 98.0
margin_bottom = 87.0
text = "#bot_count"
align = 1

[node name="hbox_count" type="HBoxContainer" parent="margin/center/vbox"]
margin_top = 91.0
margin_right = 98.0
margin_bottom = 91.0

[node name="start" type="Button" parent="margin/center/vbox"]
margin_top = 95.0
margin_right = 98.0
margin_bottom = 124.0
text = "#start"

[node name="hbox" type="HBoxContainer" parent="margin"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1341.0
margin_bottom = 61.0
size_flags_vertical = 0

[node name="space" type="Control" parent="margin/hbox"]
margin_right = 1196.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="minisettings" type="HBoxContainer" parent="margin/hbox"]
margin_left = 1200.0
margin_right = 1316.0
margin_bottom = 36.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 10
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgm" type="TextureButton" parent="margin/hbox/minisettings"]
margin_bottom = 36.0

[node name="sfx" type="TextureButton" parent="margin/hbox/minisettings"]
margin_left = 10.0
margin_right = 10.0
margin_bottom = 36.0

[node name="sep" type="VSeparator" parent="margin/hbox/minisettings"]
margin_left = 20.0
margin_right = 24.0
margin_bottom = 36.0

[node name="lang_en" type="TextureButton" parent="margin/hbox/minisettings"]
margin_left = 34.0
margin_right = 70.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
texture_normal = ExtResource( 2 )
expand = true

[node name="lang_th" type="TextureButton" parent="margin/hbox/minisettings"]
margin_left = 80.0
margin_right = 116.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
texture_normal = ExtResource( 3 )
expand = true

[node name="ani" type="AnimationPlayer" parent="."]
anims/go_play = SubResource( 1 )
anims/start = SubResource( 2 )

[connection signal="pressed" from="margin/center/vbox/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="margin/hbox/minisettings/lang_en" to="." method="_on_lang_en_pressed"]
[connection signal="pressed" from="margin/hbox/minisettings/lang_th" to="." method="_on_lang_th_pressed"]
